[package]
name = "bench_crypto"
version = "0.1.0"
edition = "2024"

[dependencies]

[dev-dependencies]
criterion = {version= "0.8", features = ["html_reports"]}
rand = "0.10.0-rc.8"
# RustCrypto family
aes = "0.9.0-rc.2"
cipher = "0.5.0-rc.6"
chacha20 = "0.10.0-rc.9"
chacha20poly1305 = "0.11.0-rc.2"
sha2 = "0.11.0-rc.4"
x25519-dalek = "2"
ed25519-dalek = "2.2.0"

# AWS-LC-RS
aws-lc-rs = "1.15.4"

# Ring
ring = "0.17.14"

# OpenSSL
openssl = "0.10.75"

[[bench]]
name = "aes128"
harness = false

[[bench]]
name = "chacha20"
harness = false

[[bench]]
name = "chacha20poly1305"
harness = false

[[bench]]
name = "sha256"
harness = false

[[bench]]
name = "x25519"
harness = false
[[bench]]
name = "ed25519"
harness = false
